--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,7 +93,8 @@ h2 {
     border-bottom: 2px solid transparent;
 }
 .masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
+.masthead-nav > li > a:focus,
+.masthead-nav > li > a.active {
     background-color: transparent;
     border-bottom-color: #a9a9a9;
     border-bottom-color: rgba(7,7,7,.25);
